# build_demo_infra

./: .gitignore  CMakeLists.txt  Readme.txt  git_pull.cfg
mylib1/: CMakeLists.txt  lib1_priv.h  mylib1.cpp
mylib1/ext_api/: mylib1.h
mylib2/: CMakeLists.txt
mylib2/headers/: mylib2.h
mylib2/sources/: lib2_priv.h  mylib2.cpp
utest/: CMakeLists.txt  main.cpp
